added html and css
structure, 0’d out web browser styles, added background and divs to html

--- a/main.css
+++ b/main.css
@@ -81,3 +81,8 @@ cursor: pointer;
 .nomargin { margin: 0; }
 .nopadding { padding: 0; }
 .nobullet { list-style: none; list-style-image: none; }
+
+body {
+  background-image: url("/Users/Deb/Documents/tjswelding/img/tjwelding.jpg");
+  background-size: 1920px 1080px;
+}
