--- a/main.css
+++ b/main.css
@@ -84,12 +84,46 @@ cursor: pointer;
 
 body {
   background-image: url("/Users/Deb/Documents/tjswelding/img/tjwelding.jpg");
-  background-size: auto;
+  background-size: 1366px 671px;
 }
 
+/* header */
 .header h1 {
 margin: 0;
 padding: 0;
 font-weight: normal;
 font-family: Arial, Helvetica, sans-serif;
+font-size: 5em;
+text-align: center;
+}
+
+/* nav */
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+background-color:#4CAF50;
 }
