--- a/main.css
+++ b/main.css
@@ -101,7 +101,12 @@ text-align: center;
 /* logo */
 .logo {
   background-color: #333333;
-  padding: 3px;
+  border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+    text-align: center;
+    float: left;
 }
 
 /* nav */
@@ -112,6 +117,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
+    font-size: 1.3em;
 }
 
 li {
@@ -133,3 +139,14 @@ a:hover:not(.active) {
 .active {
 background-color:#FFAF3A;
 }
+
+.phone {
+  float: right;
+}
+
+/* tagline */
+
+.tagline h2 {
+  color: #1A5EAB;
+  margin-top: 500px;
+  }
