--- a/main.css
+++ b/main.css
@@ -5,22 +5,23 @@ padding: 0px;
 border: 0px;
 }
 body {
-font: 1em/1.25 Arial, Helvetica, sans-serif;
+font: 1em/1.25 Condensed, Arial, Helvetica, sans-serif;
+font-weight: bold;
 }
 
 /* Headlines */
 h1, h2, h3, h4, h5, h6 {
 margin: 0;
 padding: 0;
-font-weight: normal;
-font-family: Arial, Helvetica, sans-serif;
+font-weight: bold;
+font-family: Condensed, Arial, Helvetica, sans-serif;
 }
 
 /* Text Styles */
 p, th, td, li, dd, dt, ul, ol, blockquote, q, acronym, abbr, a, input, select, textarea {
 margin: 0;
 padding: 0;
-font: normal normal normal 1em/1.25 Arial, Helvetica, sans-serif;
+font: normal normal normal 1em/1.25 Condensed, Arial, Helvetica, sans-serif;
 }
 blockquote {
 margin: 1.25em;
@@ -84,7 +85,7 @@ cursor: pointer;
 
 body {
   background-image: url("/Users/Deb/Documents/tjswelding/img/tjwelding.jpg");
-  background-size: 1366px 671px;
+  background-size: 1366px 1200px;
   background-position: floatRight;
 }
 
@@ -92,8 +93,8 @@ body {
 .header h1 {
 margin: 0;
 padding: 0;
-font-weight: normal;
-font-family: Arial, Helvetica, sans-serif;
+font-weight: bold;
+font-family: Condensed, Arial, Helvetica, sans-serif;
 font-size: 5em;
 text-align: center;
 }
@@ -147,6 +148,8 @@ background-color:#FFAF3A;
 /* tagline */
 
 .tagline h2 {
-  color: #1A5EAB;
+  color: #FFAF3A;
   margin-top: 500px;
+  font-size: 3em;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
