--- a/main.css
+++ b/main.css
@@ -149,7 +149,24 @@ background-color:#FFAF3A;
 
 .tagline h2 {
   color: #FFAF3A;
-  margin-top: 500px;
-  font-size: 3em;
+  margin-top: 400px;
+  margin-left: 5px;
+  font-size: 3.5em;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
+
+  .tagline2 h2 {
+    text-align: center;
+    font-size: 2.5em;
+  }
+
+  /* footer */
+
+.footer {
+  display: inline;
+  padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+  text-align: center;
+}
