--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ padding: 0px;
 border: 0px;
 }
 body {
-font: 1em/1.25 Condensed, Arial, Helvetica, sans-serif;
+font: 1em/1.25 "Lato", sans-serif;
 font-weight: bold;
 }
 
@@ -14,14 +14,14 @@ h1, h2, h3, h4, h5, h6 {
 margin: 0;
 padding: 0;
 font-weight: bold;
-font-family: Condensed, Arial, Helvetica, sans-serif;
+font-family: "Lato", sans-serif;
 }
 
 /* Text Styles */
 p, th, td, li, dd, dt, ul, ol, blockquote, q, acronym, abbr, a, input, select, textarea {
 margin: 0;
 padding: 0;
-font: normal normal normal 1em/1.25 Condensed, Arial, Helvetica, sans-serif;
+font: normal normal normal 1em/1.25 "Lato", sans-serif;
 }
 blockquote {
 margin: 1.25em;
@@ -84,19 +84,35 @@ cursor: pointer;
 .nobullet { list-style: none; list-style-image: none; }
 
 body {
-  background-image: url("/Users/Deb/Documents/tjswelding/img/tjwelding.jpg");
   background-size: 1366px 1200px;
   background-position: floatRight;
+  background-image: url("/Users/Deb/Documents/tjswelding/img/weldingbgd.jpg");
 }
+
 
 /* header */
 .header h1 {
 margin: 0;
 padding: 0;
 font-weight: bold;
-font-family: Condensed, Arial, Helvetica, sans-serif;
-font-size: 5em;
-text-align: center;
+font-family: "Lato", sans-serif;
+font-size: 4em;
+text-align: left;
+}
+
+/* tagline */
+
+.tagline {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  font-family: "Lato", sans-serif;
+  font-size: 2.5em;
+  text-align: center;
+  padding: 2.75em 0 2.75 0;
+  color: #ff0000;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  line-height: 1.5em;
 }
 
 /* logo */
@@ -159,6 +175,32 @@ background-color:#FFAF3A;
     text-align: center;
     font-size: 2.5em;
   }
+
+  @keyframes slidy {
+0% { left: 0%; }
+20% { left: 0%; }
+25% { left: -100%; }
+45% { left: -100%; }
+50% { left: -200%; }
+70% { left: -200%; }
+75% { left: -300%; }
+95% { left: -300%; }
+100% { left: -400%; }
+}
+
+body { margin: 0; }
+div#slider { overflow: hidden; }
+div#slider figure img { width: 845px; height: 845px; float: left}
+div#slider figure {
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+  text-align: left;
+  font-size: 0;
+  animation: 30s slidy infinite;
+}
+
 
   /* footer */
 
