--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@ text-align: left;
 
 /* nav */
 
-ul {
+.nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -137,29 +137,34 @@ ul {
     font-size: 1.3em;
 }
 
-li {
-    float: left;
+/* Remove margins and padding from the list, and add a black background color */
+ul.topnav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
-li a {
-    display: block;
-    color: white;
+/* Float the list items side by side */
+ul.topnav li {float: left;}
+
+/* Style the links inside the list items */
+ul.topnav li a {
+    display: inline-block;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    transition: 0.3s;
+    font-size: 17px;
 }
 
-a:hover:not(.active) {
-    background-color: #111;
-}
+/* Change background color of links on hover */
+ul.topnav li a:hover {background-color: #555;}
 
-.active {
-background-color:#FFAF3A;
-}
-
-.phone {
-  float: right;
-}
+/* Hide the list item that contains the link that should open and close the topnav on small screens */
+ul.topnav li.icon {display: none;}
 
 /* tagline */
 
